--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -676,81 +676,137 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background_green_light"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:visibility="visible"
-            android:gravity="center">
+            android:visibility="visible">
 
-            <LinearLayout
-                android:id="@+id/info"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/venueText"
+                <LinearLayout
+                    android:id="@+id/banner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:background="@color/teamBlueColor"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Blue Wins:"
+                        android:textColor="@color/text_white" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/buttonLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="Venue"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:layout_centerInParent="true"
+                    android:orientation="horizontal"
+                    android:gravity="center">
 
-                <TextView
-                    android:id="@+id/dateText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="Date"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    <Button
+                        android:id="@+id/blueWinsMinus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="-" />
 
-                <TextView
-                    android:id="@+id/timeText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="Start time"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/blueWinsValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textSize="24dp" />
 
-                <TextView
-                    android:id="@+id/playerAmountText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="Participants"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/blueWinsPlus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="+" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
 
             <Button
                 android:id="@+id/newRoundButton"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:backgroundTint="#FFFFFF"
                 android:text="New Round"
                 android:textColor="#000000"
                 app:strokeColor="#000000"
-                app:strokeWidth="2dp"
-                android:layout_margin="10dp"/>
+                app:strokeWidth="2dp" />
 
             <TextView
                 android:id="@+id/gameEndText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
                 android:text="Game Ended"
                 android:textSize="24dp"
                 android:textStyle="bold"
-                android:layout_marginRight="30dp"
                 android:visibility="gone" />
 
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:gravity="center"
+                    android:background="@color/teamRedColor">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Red Wins:"
+                        android:textColor="@color/text_white"/>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <Button
+                        android:id="@+id/redWinsMinus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="-" />
+
+                    <TextView
+                        android:id="@+id/redWinsValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textSize="24dp"/>
+
+                    <Button
+                        android:id="@+id/redWinsPlus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="+" />
+                </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
-
-
 
 
         <LinearLayout
