--- a/app/src/main/res/layout/fragment_level_up.xml
+++ b/app/src/main/res/layout/fragment_level_up.xml
@@ -245,7 +245,7 @@
                 android:visibility="visible">
 
                 <ImageButton
-                    android:id="@+id/upgrade1button"
+                    android:id="@+id/level_1_button"
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:backgroundTint="#FFFFFF"
@@ -254,7 +254,7 @@
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
-                    android:id="@+id/upgrade1exp"
+                    android:id="@+id/level_1_exp"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -267,7 +267,7 @@
                     android:textSize="16sp" />
 
                 <ImageButton
-                    android:id="@+id/upgrade2button"
+                    android:id="@+id/level_2_button"
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:backgroundTint="#FFFFFF"
@@ -276,7 +276,7 @@
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
-                    android:id="@+id/upgrade2exp"
+                    android:id="@+id/level_2_exp"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -289,7 +289,7 @@
                     android:textSize="16sp" />
 
                 <ImageButton
-                    android:id="@+id/upgrade3button"
+                    android:id="@+id/level_3_button"
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:backgroundTint="#FFFFFF"
@@ -298,7 +298,7 @@
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
-                    android:id="@+id/upgrade3exp"
+                    android:id="@+id/level_3_exp"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -325,7 +325,7 @@
                         android:orientation="vertical">
 
                         <ImageButton
-                            android:id="@+id/upgrade4button"
+                            android:id="@+id/ultimate_A_button"
                             android:layout_width="110dp"
                             android:layout_height="110dp"
                             android:backgroundTint="#FFFFFF"
@@ -334,7 +334,7 @@
                             tools:ignore="SpeakableTextPresentCheck" />
 
                         <TextView
-                            android:id="@+id/upgrade4exp"
+                            android:id="@+id/ultimate_A_exp"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
@@ -355,7 +355,7 @@
                         android:orientation="vertical">
 
                         <ImageButton
-                            android:id="@+id/upgrade5button"
+                            android:id="@+id/ultimate_B_button"
                             android:layout_width="110dp"
                             android:layout_height="110dp"
                             android:backgroundTint="#FFFFFF"
@@ -364,7 +364,7 @@
                             tools:ignore="SpeakableTextPresentCheck" />
 
                         <TextView
-                            android:id="@+id/upgrade5exp"
+                            android:id="@+id/ultimate_B_exp"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
